<resources>
    <string name="app_name">Advertisement board</string>
    <string name="action_login">Login</string>
    <string name="action_logout">Logout</string>
    <string name="action_registration">Registration</string>
    <string name="action_exit">Exit</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_reject">Reject</string>
    <string name="action_delete">Deleting</string>
    <string name="view">Advertisement view</string>

    <string name="buttonSave">Save</string>
    <string name="button_login">Log in</string>
    <string name="button_registration">Registration</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_delete">Delete</string>

    <string name="label_category">Category</string>
    <string name="label_delete">Are you sure you want to delete?</string>
    <string name="label_title">Title</string>
    <string name="label_description">Description</string>
    <string name="label_category_title">Title</string>
    <string name="label_category_description">Description</string>
    <string name="label_URL">Your URL</string>
    <string name="label_contact">Your contacts</string>
    <string name="label_apps">Images</string>
    <string name="label_login">Login</string>
    <string name="label_password">Password</string>
    <string name="label_user_name">Name</string>
    <string name="label_double_password">Double password</string>
    <string name="create_category">Category creating</string>
    <string name="update_category">Category updating</string>

    <string name="link_registration">Registration</string>

    <string name="message_match_passwords">Passwords don\'t match</string>
    <string name="message_empty_input">Not all fields are filled in</string>

    <string name="registration_success">Registration successfully</string>
    <string name="registration_failed">Registration failed</string>
    <string name="auth_success">Authorized successfully</string>
    <string name="auth_failed">Wrong credentials</string>
    <string name="no_connection">No connection to server</string>
    <string name="categories_failed">Error loading categories</string>
    <string name="error_during_saving">Error during saving</string>
    <string name="successful_saving">Successful saving</string>
    <string name="confirmed">Advertisement confirmed</string>
    <string name="confirm_error">Error confirming the advertisement</string>
    <string name="rejected">Advertisement rejected</string>
    <string name="reject_error">Error rejecting the advertisement</string>\
    <string name="error_during_deleting">Error during deleting</string>
    <string name="successful_deleting">Successful deleting</string>
</resources>