<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.advertisementboard.MainActivity">
    <item
        android:id="@+id/action_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/exit_to_app_24"
        android:title="@string/action_exit"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_registration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/person_24"
        android:title="@string/action_registration"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/login_24"
        android:title="@string/action_login"
        app:showAsAction="always" />
</menu>