<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/nestedScrollViewAdvertisement"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/category_margin"
        >
        <ImageView
            android:id="@+id/imageViewAdvertisement"
            android:layout_gravity="center"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/icon_font_bee" />

        <TextView
            android:id="@+id/titleLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryText"
            android:textStyle="bold"
            android:textSize="@dimen/category_primary_text_size"
            android:text="@string/label_title"
            android:layout_marginBottom="@dimen/category_margin"
            />
        <TextView
            android:id="@+id/descriptionLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondaryText"
            android:textStyle="bold"
            android:textSize="@dimen/category_secondary_text_size"
            android:text="@string/label_description"
            android:layout_marginBottom="@dimen/category_margin"
            />
        <TextView
            android:id="@+id/urlLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_URL"
            android:layout_marginBottom="@dimen/category_margin"
            />
        <TextView
            android:id="@+id/contactsLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_contact"
            android:layout_marginBottom="@dimen/category_margin"
            />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/confirmButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/primaryColor"
                android:text="@string/action_confirm"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/rejectButton"
                android:layout_width="@dimen/button_width"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/redColor"
                android:text="@string/action_reject"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>